# vaccum_bot_controller

./: .gitignore  .gitmodules
src/rpi_nodes/: README.md  package.xml  setup.cfg  setup.py
src/rpi_nodes/launch/: keyboard_control.launch.py
src/rpi_nodes/rpi_nodes/: keyboard_control.py  rpi_motor_dir.py
src/rpi_nodes/scripts/: quick_test.py  test_keyboard.py
src/vaccum_commands/: CMakeLists.txt  package.xml
src/vaccum_commands/src/: VaccumClimb.cpp
src/vaccum_control/: CMakeLists.txt  package.xml  vaccum_hardware.xml
src/vaccum_control/config/: controllers.yaml
src/vaccum_control/include/vaccum_control/: VaccumController.hpp  VaccumSystem.hpp
src/vaccum_control/src/: VaccumController.cpp  VaccumSystem.cpp
src/vaccum_description/: package.xml  setup.cfg  setup.py
src/vaccum_description/launch/: spawn.launch.py
src/vaccum_description/meshes/: camera.STL  front_left_wheel.STL  front_right_wheel.STL  left_middle_arm.STL  lidar.STL  rear_left_wheel.STL  rear_right_wheel.STL  right_middle_arm.STL
src/vaccum_description/urdf/: vaccum.ros2_control.xacro  vaccum.urdf.xacro  vaccum_description.urdf.xacro
src/vaccum_description/vaccum_description/: view_robot.py
src/vaccum_gz/: package.xml  setup.cfg  setup.py
src/vaccum_gz/config/: vaccum_default.rviz
src/vaccum_gz/launch/: vaccum.launch.py  vaccum_gz.launch.py
src/vaccum_gz/worlds/: warehouse.sdf
src/vaccum_lab/: package.xml  setup.cfg  setup.py
src/vaccum_lab/vaccum_lab/: VaccumClimb.cpp  vaccum_subscriber.py
src/vaccum_navigation/: CMakeLists.txt  package.xml
src/vaccum_navigation/config/: nav2.yaml
src/vaccum_navigation/launch/: localization.launch.py  nav2.launch.py  slam.launch.py
src/vaccum_navigation/src/: vaccum_navigator.py.cpp
src/vaccum_navigation/vaccum_navigation/: vaccum_navigator.py
